--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
   <!--CSS--> 
-  <link rel="stylesheet" href="/assets/css/global.css">
-  <link rel="stylesheet" href="/assets/css/pokedex.css">
+  <link rel="stylesheet" href="./css/global.css">
+  <link rel="stylesheet" href="./css/pokedex.css">
   <title>Pokedex</title>
 </head>
 <body>
@@ -38,9 +38,9 @@
 
 
   <!--Js--> 
-  <script src="/assets/js/pokemon-model.js"></script>
-  <script src="/assets/js/poke-api.js"></script>
-  <script src="/assets/js/main.js"></script>
+  <script src="./js/pokemon-model.js"></script>
+  <script src="./js/poke-api.js"></script>
+  <script src="./js/main.js"></script>
 
 </body>
 </html>
