--- a/single.html
+++ b/single.html
@@ -12,9 +12,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="./assets/css/global.css">
-    <link rel="stylesheet" href="./assets//css/pokedex.css">
-    <link rel="stylesheet" href="./assets/css/detailPokemon.css">
+    <link rel="stylesheet" href="./css/global.css">
+    <link rel="stylesheet" href="./css/pokedex.css">
+    <link rel="stylesheet" href="./css/detailPokemon.css">
   <title>Detalhes do pokemon</title>
 </head>
 <body>
@@ -22,8 +22,8 @@
     <!-- pokemon single-->
   </section>  
   <!--Js--> 
-  <script src="/assets/js/pokemon-model.js"></script>
-  <script src="/assets/js/poke-api.js"></script>
-  <script src="/assets/js/single.js"></script>
+  <script src="./js/pokemon-model.js"></script>
+  <script src="./js/poke-api.js"></script>
+  <script src="./js/single.js"></script>
 </body>
 </html>
